Fixes some layout bugs

--- a/app/assets/stylesheets/catarse_bootstrap/_extra.sass
+++ b/app/assets/stylesheets/catarse_bootstrap/_extra.sass
@@ -704,3 +704,7 @@ img, iframe
 #project-payment
   label
     margin-bottom: 7px
+
+.pop-share,
+.flash
+  z-index: 999
